<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUpload"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
    />


    <LinearLayout
        android:id="@+id/lyUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarUpload"
        >
        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivSelectedImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/lyUpload"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/selected_image_for_upload" />




</RelativeLayout>